@@ -149,7 +149,7 @@ endif
 ! we assume that the vertical direction (given by the gravity)
 ! is ALWAYS oriented along the z axis.
 
-if ( ippmod(iatmos).eq.2.and.modsedi.eq.1 ) then ! for humid atmosphere physics only
+if (ippmod(iatmos).eq.2.and.modsedi.eq.1) then ! for humid atmo. physics only
 
   call field_get_val_s(iliqwt, cpro_liqwt)
   call field_get_val_s(itempc, cpro_tempc)
@@ -159,6 +159,7 @@ if ( ippmod(iatmos).eq.2.and.modsedi.eq.1 ) then ! for humid atmosphere physics 
   do iel = 1, ncelet
     qliqmax = max(cpro_liqwt(iel),qliqmax)
   enddo
+  if (irangp.ge.0) call parmax(qliqmax)
 
   if(qliqmax.gt.1e-8)then
 
@@ -310,6 +311,9 @@ do iel = 1, ncel
   endif
   r3max = max(r3(iel),r3max)
 enddo
+
+if (irangp.ge.0) call parmax (r3max)
+
 end subroutine define_r3
 
 ! *******************************************************************
